--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 		<h1>iFrames</h1>
 		<h2>Youtube</h2>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/YpzV6h6xiZI?start=180" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<body>
 </html>
 
