--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 		<h1>iFrames</h1>
 		<h2>Youtube</h2>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/JxonPkRZoFk?&autoplay=1" title="YouTube Video" frameborder="0" allow="accelerometer; autoplay1; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/JxonPkRZoFk?start=180" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<body>
 </html>
 
