--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -27,7 +27,7 @@
 		<div>
 		
 		<h1>The object</h1>
-		<object data="https://images.livemint.com/img/2020/06/03/600x338/Valorant_1591218052835_1591218061187.jpg" width="300" height="200"></object>
+		<object data="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/PNG_transparency_demonstration_1.png/560px-PNG_transparency_demonstration_1.png" width="300" height="200"></object>
 		
 	<body>
 </html>
