--- a/tags.html
+++ b/tags.html
@@ -6,5 +6,9 @@
 	<body>
 		<h1>Kiheon</h1>
 		<h2>About Me</h2>
+		<p>I was born in Korea and moved here when I was 7 years old</p>
+		<p>I am a senior at the UW majoring in Biochemistry. My goal is to attend med school after graduation</p>
+		<h2>My Favorite Sites</h2>
+		<h2>My Favorite pictures</h2>
 	</body>
 </html>
