--- a/tags.html
+++ b/tags.html
@@ -9,6 +9,22 @@
 		<p>I was born in Korea and moved here when I was 7 years old</p>
 		<p>I am a senior at the UW majoring in Biochemistry. My goal is to attend med school after graduation</p>
 		<h2>My Favorite Sites</h2>
+		<ul>
+			<li>
+				<a href="https://www.reddit.com">reddit</a>
+			</li>
+			<li>
+				<a href="https://www.facebook.com">Facebook</a>
+			</li>
+			<li>
+				<a href="https://www.youtube.com">YouTube</a>
+			</li>
+			<li>
+				<a href="https://www.google.com">Google</a>
+			</li>
+			<li>
+				<a href="https://beta.crunchyroll.com">Crunchyroll</a>
+			</li>
 		<h2>My Favorite pictures</h2>
 	</body>
 </html>
