--- a/tags.html
+++ b/tags.html
@@ -26,5 +26,11 @@
 				<a href="https://beta.crunchyroll.com">Crunchyroll</a>
 			</li>
 		<h2>My Favorite pictures</h2>
+		<a href="https://unsplash.com/s/photos/shiba-inu">
+			<img src="https://images.unsplash.com/photo-1609114450169-f0656f84799e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"title="Cute Shiba Inu"style="width:100px;height:100px;margin:5px">
+		</a>
+		<a href="https://www.shutterstock.com/image-photo/beautiful-funny-young-black-tan-shiba-1190304550">
+			<img src="https://image.shutterstock.com/image-photo/beautiful-funny-young-black-tan-600w-1190304550.jpg"title="Cute Black Shiba"style="width:100px;height:100px;margin:5px">
+		</a>
 	</body>
 </html>
