--- a/tags.html
+++ b/tags.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Kiheon's site</title>
 	</head>
-	<body>
-		<h1>Kiheon</h1>
+	<body style="background-color:LightGray;">
+		<h1 style="Background-color:SlateBlue;">Kiheon</h1>
 		<h2>About Me</h2>
 		<p>I was born in Korea and moved here when I was 7 years old</p>
 		<p>I am a senior at the UW majoring in Biochemistry. My goal is to attend med school after graduation</p>
@@ -32,7 +32,6 @@
 		<a href="https://www.shutterstock.com/image-photo/beautiful-funny-young-black-tan-shiba-1190304550">
 			<img src="https://image.shutterstock.com/image-photo/beautiful-funny-young-black-tan-600w-1190304550.jpg" title="Cute Black Shiba" style="width:100px;height:100px;margin:5px">
 		</a>
-		<h1 style="Background-color:SlateBlue;">Kiheon</h1>
 		<h2>My favorite emojis</h2>
 		<p>&#128166; &#128517;
 		</p>
