--- a/tags.html
+++ b/tags.html
@@ -35,5 +35,9 @@
 		<h2>My favorite emojis</h2>
 		<p>&#128166; &#128517;
 		</p>
+		
+		<div>
+		
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/7w8HlfC5Mb8?start=369" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 </html>
