--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,14 @@
 <html>
 	<head>
 		<title>Kiheon's site</title>
+    <style>
+#myHeader {
+  background-color: Gray;
+  color: black;
+  padding: 40px;
+  text-align: center;
+} 
+</style>    
 	</head>
 	<body style="background-color:LightGray;">
 		<h1 style="Background-color:SlateBlue;">Kiheon</h1>
@@ -26,6 +34,7 @@
 				<a href="https://beta.crunchyroll.com">Crunchyroll</a>
 			</li>
 		<h2>My Favorite pictures</h2>
+        <h1 id="myHeader">Cute Shibas</h1>
 		<a href="https://unsplash.com/s/photos/shiba-inu">
 			<img src="https://images.unsplash.com/photo-1609114450169-f0656f84799e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" title="Cute Shiba Inu" style="width:100px;height:100px;margin:5px">
 		</a>
