--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -14,6 +14,7 @@
 
 <form role="form" action="http://gclass.alexburner.com/formtest.php" method="post">
 
+
 	<fieldset class="form-horizontal" >
 		<legend>Account</legend>
         <div class="form-group">
@@ -38,13 +39,16 @@
 			<label class="col-sm-3 control-label">Confirm password</label>
 			<div class="col-sm-9">
 				<input class="form-control" type="password" name="repeat_password">
-			</div>
+</form>
+            </div>
 		</div>
+ 
 	</fieldset>
 
 	<p>&nbsp;</p>
 
-	<fieldset class="form-horizontal" >
+<form action="http://gclass.alexburner.com/formtest.php" method="post">	
+    <fieldset class="form-horizontal" >
 		<legend>Personal Information</legend>
 		<div class="form-group">
 			<label class="col-sm-3 control-label">Full name</label>
@@ -174,11 +178,13 @@
 			<label class="col-sm-3 control-label">ZIP</label>
 			<div class="col-sm-9">
 				<input class="form-control" type="text" name="zip">
-			</div>
+</form>
+            </div>
 		</div>
 	</fieldset>
 
 <fieldset class="form-horizontal" >
+<form action="http://gclass.alexburner.com/formtest.php" method="post">
 		<legend>Background Information</legend>
 		<div class="form-group">
 			<label class="col-sm-3 control-label">Highest Degree Earned</label>
@@ -204,6 +210,7 @@
 					<option value="College">College</option>
 			
 				</select>
+        </form>        
 		</div>
 	</fieldset>
 
